
noinst_LIBRARIES = liblogic.a

liblogic_a_SOURCES =		\
	about.cpp		\
	game.cpp		\
	game.h			\
	gameinfo.cpp		\
	gameinfo.h		\
	globals.h		\
	lobby.cpp		\
	lobby.h			\
	logic.cpp		\
	make.cpp		\
	make.h			\
	netlogic.h		\
	netplay.cpp		\
	netplay.h		\
	object.cpp		\
	object.h		\
	objects.cpp		\
	objects.h		\
	packet.h		\
	player.cpp		\
	player.h		\
	protocol.h		\
	shinobi.h
