
noinst_LIBRARIES = libSDLscreen.a

libSDLscreen_a_SOURCES =	\
	ErrorBase.h		\
	SDL_FrameBuf.cpp	\
	SDL_FrameBuf.h		\
	UIArea.cpp		\
	UIArea.h		\
	UIElement.cpp		\
	UIElement.h		\
	UIElementButton.cpp	\
	UIElementButton.h	\
	UIElementLine.cpp	\
	UIElementLine.h		\
	UIElementRect.cpp	\
	UIElementRect.h		\
	UIElementTexture.cpp	\
	UIElementTexture.h	\
	UIManager.cpp		\
	UIManager.h		\
	UIPanel.cpp		\
	UIPanel.h		\
	UITemplates.cpp		\
	UITemplates.h
