
noinst_LIBRARIES = libSDLscreen.a

libSDLscreen_a_SOURCES =	\
	ErrorBase.h		\
	SDL_FrameBuf.cpp	\
	SDL_FrameBuf.h		\
	UIArea.cpp		\
	UIArea.h		\
	UIBaseElement.cpp	\
	UIBaseElement.h		\
	UIDialog.cpp		\
	UIDialog.h		\
	UIDialogButton.cpp	\
	UIDialogButton.h	\
	UIElement.cpp		\
	UIElement.h		\
	UIElementButton.cpp	\
	UIElementButton.h	\
	UIElementCheckbox.cpp	\
	UIElementCheckbox.h	\
	UIElementEditbox.cpp	\
	UIElementEditbox.h	\
	UIElementLabel.cpp	\
	UIElementLabel.h	\
	UIElementLine.cpp	\
	UIElementLine.h		\
	UIElementRadio.cpp	\
	UIElementRadio.h	\
	UIElementRect.cpp	\
	UIElementRect.h		\
	UIElementTexture.cpp	\
	UIElementTexture.h	\
	UIFontInterface.h	\
	UIManager.cpp		\
	UIManager.h		\
	UIPanel.cpp		\
	UIPanel.h		\
	UISoundInterface.h	\
	UITemplates.cpp		\
	UITemplates.h
